--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
 <!-- end portfolio -->
 <!-- start video -->
 <div class="video">
-    <video  autoplay muted loop>
+<!--     <video  autoplay muted loop>
         <source src="vedio/vedio.mp4">
-    </video>
+    </video> -->
     <div class="text">
         <h2>SUPER AWESOME VIDEO HERE</h2>
         <p>Its All You Need</p>
