--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 <!-- start video -->
 <div class="video">
     <video  autoplay muted loop>
-        <source src="vedio/vedio.mp4">
+        <source src="vedio/video.mp4">
     </video>
     <div class="text">
         <h2>SUPER AWESOME VIDEO HERE</h2>
